--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "start": "yarn develop",
     "format": "prettier --write \"src/**/*.{js,jsx,json}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "postcss build styles.css --config tailwind.js --output output.css"
+    "build:css": "postcss build styles.css --config tailwind.js --output output.css",
+    "deploy": "yarn build --prefix-paths && gh-pages -d public"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.1.0",
+    "gh-pages": "^2.0.1",
     "postcss-cli": "^6.0.1",
     "prettier": "^1.15.2",
     "tailwindcss": "^0.7.2"
