--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "start": "yarn develop",
     "format": "prettier --write \"src/**/*.{js,jsx,json}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "postcss build styles.css --config tailwind.js --output output.css",
-    "deploy": "yarn build --prefix-paths && gh-pages -d public -b production"
+    "build:css": "postcss build styles.css --config tailwind.js --output output.css"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.1.0",
