--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,7 @@
 backend:
-  name: test-repo
-  # name: gitlab
-  # repo: EloD10/testesting
-  # branch: new
+  name: github
+  repo: EloD10/gatsby-tailwindcss-netlifycms
+  branch: master
 
 media_folder: static/assets
 public_folder: assets
